--- a/Css/style.css
+++ b/Css/style.css
@@ -66,7 +66,7 @@ body {
   margin-left: auto;
 }
 .header-items .header-item + .header-item {
-  margin-left: 20px;
+  margin-left: 30px;
 }
 .header-logo,
 .footer-logo {
@@ -124,6 +124,7 @@ body {
 }
 .hero-section {
   background-color: #2f303a;
+  padding: 200px 0px;
 }
 .hero-text {
   display: block;
@@ -162,20 +163,26 @@ body {
   background-color: #188ce8;
 }
 /* ------section benefist */
-.benefist-subject,
-.project-subject {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .benefist-list {
   display: flex;
   margin: 0px;
   padding: 0px;
 }
-.benefist-list .benefist-item {
+.benefist-item {
+  width: calc((100%-90px) / 4);
   margin-right: 30px;
-}
-.benefist-list .benefist-item:last-child {
-  margin-right: 0px;
 }
 .benefist-title {
   font-weight: 700;
@@ -210,13 +217,16 @@ img {
   padding: 0px;
   margin: 0px;
 }
-.case-item {
+/* .case-item {
   margin-right: 30px;
 }
 .case-item:last-child {
   margin-right: 0px;
+} */
+.case-item {
+  width: calc((100%-60px) / 3);
+  margin-right: 30px;
 }
-
 /* ------team-section-----   */
 .team-section {
   background-color: #f5f4fa;
@@ -233,13 +243,10 @@ img {
   display: flex;
   padding: 0px;
   margin: 0px;
-  justify-content: space-between;
 }
-.team-list .team-item {
+.team-item {
+  width: calc((100%-90px) / 4);
   margin-right: 30px;
-}
-.team-list .team-item:last-child {
-  margin-right: 0px;
 }
 .team-title {
   font-weight: 500;
@@ -298,6 +305,7 @@ img {
 }
 .footer-list.list {
   padding-left: 0px;
+  margin: 0px;
 }
 /* -------portfolio--------- */
 
@@ -306,6 +314,8 @@ img {
   display: flex;
   justify-content: center;
   padding-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 34px;
 }
 .main-list .main-btn {
   margin-right: 8px;
@@ -346,14 +356,15 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
+.project-list {
+  margin: 0 -30px -30px 0;
+  padding: 0;
+}
 .project-info {
-  width: calc((100%-60px) / 4);
+  width: calc((100% - 90px) / 3);
   margin-right: 30px;
+  margin-bottom: 30px;
 }
-.project-info:nth-child(3) {
-  margin-right: 0px;
-}
-
 .project {
   padding: 20px 24px 20px 24px;
   border: 1px solid #eeeeee;
