--- a/Css/style.css
+++ b/Css/style.css
@@ -155,7 +155,7 @@ body {
   margin: 0px 700px 200px 700;
   display: block;
   margin: 0 auto;
-  border: 0px;
+  border-radius: 4px;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -177,7 +177,7 @@ body {
 }
 .benefist-list {
   display: flex;
-  margin: 0px;
+  margin: 0 -30px 0 0;
   padding: 0px;
 }
 .benefist-item {
@@ -215,14 +215,8 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 0px;
-  margin: 0px;
+  margin: 0 -30px 0 0;
 }
-/* .case-item {
-  margin-right: 30px;
-}
-.case-item:last-child {
-  margin-right: 0px;
-} */
 .case-item {
   width: calc((100%-60px) / 3);
   margin-right: 30px;
@@ -242,7 +236,7 @@ img {
 .team-list {
   display: flex;
   padding: 0px;
-  margin: 0px;
+  margin: 0 -30px 0 0;
 }
 .team-item {
   width: calc((100%-90px) / 4);
@@ -315,7 +309,7 @@ img {
   justify-content: center;
   padding-left: 0px;
   margin-top: 0px;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 .main-list .main-btn {
   margin-right: 8px;
@@ -333,7 +327,7 @@ img {
   color: var(--title-color);
   cursor: pointer;
   padding: 6px 22px;
-  border: 0;
+  border-radius: 4px;
 }
 .main-button:hover,
 .main-button:focus {
@@ -346,7 +340,7 @@ img {
 .project-title {
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-color);
   margin-top: 0px;
