--- a/Css/style.css
+++ b/Css/style.css
@@ -156,6 +156,7 @@ body {
   display: block;
   margin: 0 auto;
   border-radius: 4px;
+  border: 0px;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -327,6 +328,7 @@ img {
   color: var(--title-color);
   cursor: pointer;
   padding: 6px 22px;
+  border: 0px;
   border-radius: 4px;
 }
 .main-button:hover,
